# AI_UI

./: .gitignore  LICENSE  README.md  SETUP_NEW_REPO.md  init-new-repo.ps1
.github/workflows/: ci.yml  release.yml
ai-ui/: .gitignore  Cargo.toml
ai-ui/.cargo/: config.toml
ai-ui/.github/workflows/: release.yml
ai-ui/assets/: ai-ui.desktop  default-config.toml
ai-ui/crates/ai-ui-ai/: Cargo.toml
ai-ui/crates/ai-ui-ai/src/: claude.rs  lib.rs  mcp.rs  ollama.rs  streaming.rs
ai-ui/crates/ai-ui-shell/: Cargo.toml
ai-ui/crates/ai-ui-shell/src/: app.rs  command_bar.rs  launcher.rs  main.rs  taskbar.rs
ai-ui/crates/ai-ui-shell/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
ai-ui/crates/ai-ui-system/: Cargo.toml
ai-ui/crates/ai-ui-system/src/: apps.rs  hotkeys.rs  lib.rs  status.rs  windows.rs
wiki/: Architecture.md  Configuration.md  Contributing.md  Getting-Started.md  Home.md
