[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ASGARD Team <dev@asgard.dev>"]

[workspace.dependencies]
# UI Framework (production-proven by COSMIC desktop)
iced = { version = "0.14", features = ["wgpu", "tiny-skia", "canvas", "image", "svg", "tokio"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
