[package]
name = "ai-ui-ai"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# SSE streaming for Claude API
reqwest-eventsource = "0.6"

# Ollama local fallback
ollama-rs = { version = "0.3", features = ["stream"] }

# Retry with exponential backoff
backoff = { version = "0.4", features = ["tokio"] }

# Secure API key storage
keyring = "3"

# Config directory
dirs = "6"
toml = "0.8"
